fixed extra horizon. whitespace by hiding overflow

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -92,6 +92,7 @@ body {
   font-family: Roboto;
   font-style: normal;
   font-weight: 300;
+  overflow-x: hidden;
     // margin: 0;
     // display: grid;
     // grid-template-columns: 
@@ -146,8 +147,7 @@ footer {
     background: rgba(165, 196, 118, 0.07);
     color: rgba(115, 149, 62, 0.7);
     padding-top: 1em;
-    padding: 2em 1;
-    
+    padding: 2em 1;  
  
 }
 
@@ -167,6 +167,12 @@ input[type=text], select, textarea {
   margin-top: 6px; /* Add a top margin */
   margin-bottom: 16px; /* Bottom margin */
   resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+.contact {
+  margin: auto;
+  width: 50%;
+  // padding: 10px;
 }
 
 input[type=submit] {
